<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about"
                    android:text="@string/description"
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>


                <TextView
                    android:id="@+id/service"
                    android:layout_below="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/service_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/service"
                    android:text="@string/service"
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/payment"
                    android:layout_below="@+id/service_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Payment Options"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/payment_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/payment"
                    android:text="@string/payment"
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"/>


            </RelativeLayout>





        </androidx.cardview.widget.CardView>

    </RelativeLayout>





</ScrollView>