<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Res_Detail">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:src="@drawable/o"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin"
                android:title="@string/recent_news">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView

        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/dhaka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_news"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_favorite"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:layout_gravity="center_vertical"
                        android:text="@string/publish_date"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="14dp"
                        android:padding="12dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_news"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"/>



                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:tabSelectedTextColor="@android:color/black"
                    app:tabTextColor="#5400ACC1"
                    >

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabCat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="about"
                        android:textAllCaps="false"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabTrend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="menu"
                        android:textAllCaps="false"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabOffer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="reviews"
                        android:textAllCaps="false"/>



                </com.google.android.material.tabs.TabLayout>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.viewpager.widget.ViewPager

            android:id="@+id/viewPager"
            android:layout_below="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="620dp">

        </androidx.viewpager.widget.ViewPager>






    </androidx.core.widget.NestedScrollView>







    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        android:background="@color/colorPrimaryDark"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>